-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.4, 6.8, 6.9.1, 6.9, 6.10.0 Beta3
-
6.9
-
None
-
71967f318 (dev), 220cab5f7 (6.9), 024ea8d51 (tqtc/lts-6.8)
Consider the following QML code
import QtQuick Item { Item { component Foo: Item { required property var bla } } }
qmllint shows a warning "Warning: shortcut.qml:4:5: Component is missing required property bla from Item [required]"
There is no runtime problem though, since I'm not actually creating a Foo
- relates to
-
QTBUG-136058 [Reg] qmllint: mix up between required properties
-
- Closed
-
| For Gerrit Dashboard: QTBUG-136008 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 640247,7 | qmllint: don't warn about required properties in inline components | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
| 642029,4 | qmllint: don't warn about required properties in inline components | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 642679,2 | qmllint: don't warn about required properties in inline components | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |