qmllint: don't warn about required properties in inline components

Amends daf57e29de918b7b4be7bb0d469db0c51d41bb07 that recurses into
inline components when checking for required properties that were not
set. We should only check inline components that are base types of the
scope, and ignore all inline components in children of the scope.

Fixes: QTBUG-136008
Change-Id: I8c687ce97b3f2eac699e2fd535193197b5239ada
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit 71967f318a9cfb617937c89963b50889b3ff6d26)
(cherry picked from commit 220cab5f741fe5c954cd1eb110811ea931fcf939)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>